force-app/main/default/objects/User_Research__c/User_Research__c.object-meta.xml
<CustomObject>
    <label>User Research</label>
    <nameField>
        <displayFormat>UR-{0000000}</displayFormat>
        <label>User Research Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Research</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>