force-app/main/default/objects/User_Research__c/fields/Accessibility__c.field-meta.xml
<CustomField>
    <fullName>Accessibility__c</fullName>
    <inlineHelpText>Include details on any accessibility needs, including details around the use of any assistive technologies.</inlineHelpText>
    <label>Accessibility</label>
    <type>TextArea</type>
</CustomField>