force-app/main/default/objects/User_Research__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>User Research</relationshipLabel>
    <relationshipName>User_Research</relationshipName>
    <type>Lookup</type>
</CustomField>