force-app/main/default/objects/User_Research__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <inlineHelpText>Describe the function/ responsibilities of this user&apos;s role.</inlineHelpText>
    <label>Function</label>
    <type>TextArea</type>
</CustomField>