force-app/main/default/objects/User_Research__c/fields/Organisation_Procurement_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Procurement_Maturity__c</fullName>
    <inlineHelpText>Include details around the organisation’s procurement maturity, e.g. do they have a specific procurement/ commercial function? How established are their procurement processes? etc.</inlineHelpText>
    <label>Organisation Procurement Maturity</label>
    <type>TextArea</type>
</CustomField>