force-app/main/default/objects/User_Research__c/fields/Procurement_Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Experience_Level__c</fullName>
    <inlineHelpText>Include details of how experienced the user is regarding procurement (e.g. novice - new to role, mature - end-to-end procurement experience, etc.).</inlineHelpText>
    <label>Procurement Experience Level</label>
    <type>TextArea</type>
</CustomField>