force-app/main/default/objects/User_Research__c/fields/Tech_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Tech_Capabilities__c</fullName>
    <inlineHelpText>Select the user’s level of technical capability.</inlineHelpText>
    <label>Tech Capabilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never have, never will</fullName>
            </value>
            <value>
                <fullName>Was online, but no longer</fullName>
            </value>
            <value>
                <fullName>Willing and unable</fullName>
            </value>
            <value>
                <fullName>Reluctantly online</fullName>
            </value>
            <value>
                <fullName>Learning the ropes</fullName>
            </value>
            <value>
                <fullName>Task specific</fullName>
            </value>
            <value>
                <fullName>Basic digital skills</fullName>
            </value>
            <value>
                <fullName>Confident</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>