force-app/main/default/objects/User_Research__c/listViews/User_Research_queue_User_Research.listView-meta.xml
<ListView>
    <fullName>User_Research_queue_User_Research</fullName>
    <filterScope>Queue</filterScope>
    <label>User Research queue</label>
    <queue>User_Research_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>